# wvui

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  api_definition.yaml
scripts/: generate_api.py
src/: main.cpp  rest_server.cpp  rest_server.h  window_utils.cpp  window_utils.h
ui/: index.html
